<!--
  Copyright 2013 The Android Open Source Project
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/random"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_app_string"
        android:textColor="#4883e2"
        android:textSize="25sp"
        android:fontFamily="monospace" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="#48e28f"
            android:text="@string/roll"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginTop="40dp"
            android:background="#48e28f"
            android:text="@string/copy"
            android:textColor="#FFFF"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:background="#48e28f"
            android:text="@string/reset"
            android:textColor="#FFFF"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextSwitcher
        android:id="@+id/switcher"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="#acffa8"
        android:padding="30sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="115dp"
        android:paddingStart="115dp"
        android:textColor="#ef4a5a"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry"
        android:text="@string/round" />

    <TextView
        android:id="@+id/tvrights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"
        android:text="@string/copyrights"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>